# vrtgen

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  COPYRIGHT  Dockerfile  README.md  command.yaml  requirements.txt  setup.cfg  setup.py  test.yaml  vita49gen.py  vrtpktgen
.ci/: alpine3.19.Dockerfile  centos.Dockerfile  rockylinux8.Dockerfile  rockylinux9.Dockerfile  ubuntu20.Dockerfile  ubuntu22.Dockerfile
cmake/: vrtgen.pc.in
cpp/: CMakeLists.txt  Makefile  README.md  gencpp.py  setup.cfg  setup.py
cpp/include/catch/: catch.hpp
cpp/include/vrtgen/: buffer.hpp  fixed.hpp  packed.hpp  packing.hpp  swap.hpp  types.hpp  utils.hpp  version.hpp.in  vrtgen.hpp
cpp/include/vrtgen/socket/: socket_address.hpp  socket_base.hpp  socket_endpoint.hpp  udp.hpp
cpp/include/vrtgen/types/: field.hpp  fixed.hpp  optional.hpp  packed.hpp  size.hpp  swap.hpp
cpp/include/vrtgen/utils/: macros.hpp
cpp/lib/: test.cpp
cpp/python/vrtgen/backend/cpp/: __init__.py  enums.py  generator.py  jinja.py  struct.py  types.py  utils.py
cpp/python/vrtgen/backend/cpp/templates/: controllee.hpp  controllee_base.hpp  controller.hpp  enums.hpp  header.hpp  packet.cpp  packet.hpp  struct.hpp
cpp/templates/: cif.hpp  enums.hpp  header.hpp  struct.hpp  trailer.hpp
cpp/tests/: bytes.hpp  packed.cpp  prologue.cpp  test.cpp  utils.cpp  utils.hpp
cpp/tests/codegen/: basic.yaml  control_ids.yaml  discrete.yaml  structs.yaml  test_basic.cpp  test_cif0.cpp  test_control_ids.cpp  test_structs.cpp  test_timestamp.cpp  test_user.cpp  timestamp.yaml  user.yaml
cpp/tests/codegen/yamls/: basic.yaml  cif0.yaml  control_ids.yaml  timestamp.yaml  user.yaml
cpp/tests/include/: bindump.hpp  bytes.hpp
cpp/tests/libvrtgen/: cif0.cpp  control.cpp  packed.cpp  prologue.cpp  socket.cpp  types.cpp  utils.cpp
cpp/tests/utils/: bindump.cpp  main.cpp
doc/: yaml-guide.md
docker/: centos.Dockerfile  rockylinux.Dockerfile  ubuntu16.Dockerfile  ubuntu18.Dockerfile  ubuntu20.Dockerfile
docs/: CMakeLists.txt  doxygen.conf
examples/app/: .Controllee.hpp  .ExampleInfoControllee.hpp  .RDCInformationControllee.hpp  Makefile  README.md  Streamer.hpp  example_controllee.cpp  example_controller.cpp  generate.sh  rdc-information.yaml  test_controllee.cpp  test_controller.cpp
examples/difi/: difiv1.1.yaml  generate.sh  signal_data.yaml  standard_context.yaml  version_context.yaml
examples/nats/: .Controllee.hpp  README.md  example-information.yaml  example_controllee.cpp  example_controller.cpp  generate.sh
examples/packets/: configuretuner-command.yaml  example-context.yaml  example-control.yaml  generate.sh  querytuner-command.yaml  signal-data.yaml  tunerinfo-context.yaml
include/: CMakeLists.txt
include/vrtgen/: CMakeLists.txt  buffer.hpp  nats.hpp  packing.hpp  socket.hpp  types.hpp  utility.hpp  utils.hpp  version.hpp  vrtgen.hpp
include/vrtgen/nats/: client.hpp  utility.hpp
include/vrtgen/packing/: cif0.hpp  cif1.hpp  cif2.hpp  cif7.hpp  command.hpp  enums.hpp  header.hpp  indicator_fields.hpp  prologue.hpp  state_event_indicators.hpp  trailer.hpp
include/vrtgen/socket/: socket_base.hpp
include/vrtgen/types/: fixed.hpp  oui.hpp  packed.hpp  size.hpp  swap.hpp  uuid.hpp
lib/cpp/: CMakeLists.txt
lib/cpp/cmake/: vrtgen.pc.in  vrtgenConfig.cmake.in
lib/cpp/docs/: CMakeLists.txt
lib/cpp/tests/codegen/: CMakeLists.txt  test_basic.cpp  test_class_id.cpp  test_command.cpp  test_context.cpp  test_data.cpp  test_header.cpp  test_stream_id.cpp  test_timestamp.cpp  test_trailer.cpp
lib/cpp/tests/include/: bytes.hpp  constants.hpp
lib/cpp/tests/vrtgen/: CMakeLists.txt  cif0.cpp  cif1.cpp  class_id.cpp  command.cpp  header.cpp  trailer.cpp  types.cpp
lib/cpp/vrtgen/: types.hpp  utility.hpp  version.hpp
lib/cpp/vrtgen/nats/: client.hpp  message.hpp
lib/cpp/vrtgen/packing/: cif0.hpp  cif1.hpp  cif2.hpp  command.hpp  enums.hpp  header.hpp  indicator_fields.hpp
lib/cpp/vrtgen/socket/: tcp.hpp  udp.hpp
lib/cpp/vrtgen/types/: packed.hpp
lib/python/: CMakeLists.txt
lib/python/vrtgen/: cif0.cpp  cif1.cpp  cif2.cpp  cif7.cpp  command.cpp  enums.cpp  header.cpp  indicator_fields.cpp  prologue.cpp  state_event_indicators.cpp  trailer.cpp  uuid.cpp  vrtgen.cpp
src/cpp/: gencpp.py  packing.hpp
src/cpp/templates/: cif.hpp  enums.hpp
src/vrtgen/: main.py  version.py
src/vrtgen/backend/: bindump.py  check.py  cpp.py  generator.py  jinja.py
src/vrtgen/model/: __init__.py  config.py  field.py
src/vrtgen/parser/: __init__.py  cif.py  field.py  file.py  loader.py  mapping.py  packet.py  section.py  user.py  utils.py  value.py
src/vrtgen/types/: __init__.py  basic.py  cif0.py  cif1.py  cifmeta.py  container.py  control.py  enums.py  header.py  prologue.py  struct.py  trailer.py  user.py
testing/: centos.Dockerfile  rockylinux.Dockerfile  ubuntu16.Dockerfile  ubuntu18.Dockerfile  ubuntu20.Dockerfile
tests/: context.yaml  test_enums.py  test_parser.py  test_structs.py  test_types.py  test_user_defined.py  test_user_parser.py  test_value_parsers.py
tests/codegen/cpp/: CMakeLists.txt  constants.hpp  test_basic.cpp  test_class_id.cpp  test_command.cpp  test_context.cpp  (+5 more)
tests/cpp/: main.cpp
tests/libvrtgen/: cif0.cpp  cif1.cpp  class_id.cpp  command.cpp  header.cpp  prologue.cpp  trailer.cpp  types.cpp
tests/parser/: test_aor.py  test_basic_packets.py  test_cam.py  test_cif0.py  test_cif1.py  test_cif2.py  test_cif7.py  test_class_id.py  test_context.py  test_control.py  test_data.py  test_discrete_io.py  test_placeholder.py  test_stream_id.py  test_timestamp.py  test_trailer.py
tests/yamls/: context.yaml  test-extends.yaml  test-include.yaml
v49gen/: formats.py  packets.py  parser.py
v49gen/backend/: cpp.py
v49gen/model/: packets.py
v49gen/packet/: __init__.py  field.py  packets.py
vrtgen/: parser.py
vrtgen/backend/: bindump.py  cpp.py  generator.py
vrtgen/model/: config.py  enums.py  field.py  packets.py
vrtgen/parser/: field.py  file.py  packet.py  value.py
vrtgen/types/: basic.py  cif0.py  cif1.py  cifmeta.py  enums.py  header.py  struct.py
(+99 files in other folders)
