[metadata]
name = vrtgen
version = attr: src.vrtgen.version.__version__
license = LGPL

[options]
python_requires = >= 3.6
package_dir =
    = src
packages =
    vrtgen
    vrtgen.backend
    vrtgen.model
    vrtgen.parser
    vrtgen.types
install_requires =
    PyYaml ~= 3.11
    Jinja2 ~= 2.8

[options.entry_points]
console_scripts =
    vrtpktgen = vrtgen.main:main
vrtgen.backend.packet =
    bindump = vrtgen.backend.bindump:BinaryDumper

[bdist_rpm]
release = 1%%{dist}
requires =
    python36-PyYAML
    python36-jinja2
