[metadata]
name = vrtgen
version = attr: vrtgen.version.__version__
license = LGPL

[options]
python_requires = >= 3.6
package_dir =
    = src
packages =
    vrtgen
    vrtgen.backend
    vrtgen.model
    vrtgen.parser
    vrtgen.parser.field
    vrtgen.parser.packet
    vrtgen.parser.informationclass
    vrtgen.types
install_requires =
    PyYaml ~= 3.11
    Jinja2 ~= 2.8

[options.entry_points]
console_scripts =
    vrtpktgen = vrtgen.main:main
vrtgen.backend.packet =
    bindump = vrtgen.backend.bindump:BinaryDumper
    check = vrtgen.backend.check:Check

[bdist_rpm]
release = 1%%{dist}
requires =
    python36-PyYAML
    python36-jinja2

[tool:pytest]
junit_suite_name = vrtgen
testpaths = tests
