[metadata]
name = vrtgen
version = attr: vrtgen.version.__version__
license = LGPL

[options]
python_requires = >= 3.7
package_dir =
    = src
packages =
    vrtgen
    vrtgen.parser
    vrtgen.parser.model
    vrtgen.parser.model.types
    vrtgen.backend
    vrtgen.backend.cpp
install_requires =
    PyYaml
    Jinja2

[options.package_data]
* = 
    templates/*
    templates/macros/*/*

[options.entry_points]
console_scripts =
    vrtpktgen = vrtgen.main:main
vrtgen.backend.packet =
    cpp = vrtgen.backend.cpp:CppGenerator

[bdist_rpm]
release = 1%%{dist}
requires =
    python37-PyYAML
    python37-jinja2

[tool:pytest]
junit_suite_name = pyvrtgen
testpaths = 
    tests/parser
