[metadata]
name = vrtgen-cpp
version = 0.3.1
license = LGPL

[options]
python_requires = >= 3.6
package_dir =
    = python
packages =
    vrtgen.backend.cpp
install_requires =
    vrtgen ~= 0.3
    Jinja2 ~= 2.8

[options.package_data]
* = templates/*

[options.entry_points]
vrtgen.backend.packet =
    cpp = vrtgen.backend.cpp:CppGenerator

[bdist_rpm]
release = 1%%{dist}
requires =
    vrtgen = %%{version}
